<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_accueil"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/nav_accueil" />
    <item
        android:id="@+id/nav_utilisateur"
        android:title="Utilisateur"/>

    <item
        android:id="@+id/nav_classement"
        android:title="@string/nav_classement"
        android:icon="@mipmap/ic_star_rate_black_18dp"/>

    <item
        android:id="@+id/nav_programmes"
        android:title="@string/nav_programmes" />

    <item
        android:id="@+id/nav_imc"
        android:title="@string/nav_imc" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@mipmap/ic_power_settings_new_black_24dp"
        android:title="@string/nav_logout" />

    <item
        android:id="@+id/nav_apropos"
        android:title="@string/nav_apropos"/>



</menu>