<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".aproposFragment">


    <TextView
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/icon_run_appli" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/apropos"
        android:textAlignment="center"
        android:textColor="@color/gris"
        android:textSize="28sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/yassine"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/arno"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/adrian"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />


</LinearLayout>