<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imc_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/imc_text1_poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc_poids"
            android:textSize="20sp" />

        <EditText

            android:id="@+id/imc_text2_poids"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/poids_kg"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/imc_text1_taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imc_taille"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/imc_text2_taille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/taille_cm"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/imc_btn"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="187dp"
        android:text="@string/imc_btn"
        android:textSize="18sp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/imc_result1"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/imc_result2"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:textSize="22sp" />
</RelativeLayout>